bumped test/reproducers/6913047/Bug6913047.class to workalso with jdk11 and up