@@ -39,10 +39,14 @@ case "$OS" in
     ;;
 esac
 
+if [ "0$OTOOL_JDK_VERSION" -gt "8" ]; then
+  EXTFLAGS='--add-modules jdk.crypto.cryptoki,java.base --add-exports jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED --add-opens jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED --add-exports java.base/javax.crypto=ALL-UNNAMED --add-opens java.base/javax.crypto=ALL-UNNAMED'
+fi
+
 set -exo pipefail
 
-$TESTJAVA/bin/javac -d . $TESTSRC/TestDiagnosticCommandImpl.java
-$TESTJAVA/bin/java -Xcheck:jni TestDiagnosticCommandImpl 2>&1 | tee TestDiagnosticCommandImpl.out
+$TESTJAVA/bin/javac $EXTFLAGS -d . $TESTSRC/TestDiagnosticCommandImpl.java
+$TESTJAVA/bin/java $EXTFLAGS -Xcheck:jni TestDiagnosticCommandImpl 2>&1 | tee TestDiagnosticCommandImpl.out
 
 if cat TestDiagnosticCommandImpl.out | grep -i -e WARNING ; then
   echo failed
